--- a/WebServer/templates/index.html
+++ b/WebServer/templates/index.html
@@ -6,13 +6,55 @@
    <body>
 		<h1>Actuators</h1>
 		<h2> Status </h2>
-		<h3> RED LED ==>  {{ temp1  }}</h3>
+		<h3> TEMP0 ==>  {{ temp0  }}</h3>
 		<br>
 		<h2> Commands </h2>
 		<h3> 
 			RED LED Ctrl ==> 
-			<a href="/button1/on" class="button">{{ system_state }}</a>  
+			<div class="button" onclick="clickButton()">{{ system_state }}</div>  
 		</h3>
-		
+
+        <h3> 
+			Current pump speed: {{ pump_set }} ==> 
+			<div class="button" onclick='setPumpSpeed(20)'> SET </div>  
+		</h3>
+	
+    <script>
+
+        function setPumpSpeed(speed){
+            var xmlhttp = new XMLHttpRequest();
+            var url = "/setPumpSpeed";
+            var data = JSON.stringify({"value":speed});
+
+            xmlhttp.onreadystatechange = function() {
+                if (this.readyState == 4 && this.status == 200) {
+                    var myArr = JSON.parse(this.responseText);
+                    console.log("Got response")
+                    location.reload();
+                }
+            };
+            xmlhttp.open("POST", url, true);
+            xmlhttp.setRequestHeader("Content-Type", "application/json");
+            xmlhttp.send(data);
+        }
+
+        function clickButton(){
+            var xmlhttp = new XMLHttpRequest();
+            var url = "/debug";
+
+            xmlhttp.onreadystatechange = function() {
+                if (this.readyState == 4 && this.status == 200) {
+                    var myArr = JSON.parse(this.responseText);
+                    console.log("Got response")
+                    location.reload();
+                }
+            };
+            xmlhttp.open("GET", url, true);
+            xmlhttp.setRequestHeader("Content-Type", "application/json");
+            xmlhttp.send();
+        }
+    
+    </script>
+
    </body>
 </html>
