--- a/WebServer/static/style.css
+++ b/WebServer/static/style.css
@@ -1,7 +1,7 @@
 body {
-    background: blue;
+    background: rgb(250, 250, 250);
     color: yellow;
-    font-size: 1.5rem!important;
+    font-size: 2rem!important;
 }
 .button {
     font: bold 15px Arial;
@@ -17,12 +17,14 @@ body {
 }
 
 .content{
+    background: rgb(199, 42, 42);
+    padding:1rem;
     display: flex;
     flex-direction: column;
     width: 27rem;
-    height:80%;
-    margin-top:1rem;
-    border: 1px solid red;
+    height:100%;
+    margin-top:2rem;
+    border: 2px solid rgb(7, 4, 4);
     margin-left:auto;
     margin-right:auto;
 }
@@ -32,12 +34,12 @@ body {
     flex-direction: row;
     width: 100%;
     justify-content: space-between;
-    padding-top: 0.7rem;
-    padding-bottom: 0.7rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .flex-inline{
     display:flex;
     flex-direction: row;
-    margin-left: 0.5rem;
+    margin-left: 1rem;
 }
