--- a/WebServer/static/style.css
+++ b/WebServer/static/style.css
@@ -1,7 +1,7 @@
 body {
     background: rgb(250, 250, 250);
     color: yellow;
-    font-size: 2rem!important;
+    font-size: 2rem !important;
 }
 .button {
     font: bold 15px Arial;
@@ -16,21 +16,27 @@ body {
     border-left: 1px solid #cccccc;
 }
 
-.content{
+.content {
     background: rgb(199, 42, 42);
-    padding:1rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     width: 27rem;
-    height:100%;
-    margin-top:2rem;
+    height: 100%;
+    margin-top: 2rem;
     border: 2px solid rgb(7, 4, 4);
-    margin-left:auto;
-    margin-right:auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.row{
-    display:flex;
+@media only screen and (max-width: 800px) {
+    .content {
+        width: 50rem !important;
+    }
+}
+
+.row {
+    display: flex;
     flex-direction: row;
     width: 100%;
     justify-content: space-between;
@@ -38,8 +44,8 @@ body {
     padding-bottom: 1rem;
 }
 
-.flex-inline{
-    display:flex;
+.flex-inline {
+    display: flex;
     flex-direction: row;
     margin-left: 1rem;
 }
