--- a/WebServer/static/style.css
+++ b/WebServer/static/style.css
@@ -5,8 +5,12 @@ body {
 }
 .button {
     font: bold 15px Arial;
-    width: 2rem;
+    width: 3rem;
+    height: 100%;
+    text-align: center;
+    cursor: pointer;
     text-decoration: none;
+    font-size: large;
     background-color: #eeeeee;
     color: #333333;
     padding: 2px 6px 2px 6px;
@@ -14,6 +18,8 @@ body {
     border-right: 1px solid #333333;
     border-bottom: 1px solid #333333;
     border-left: 1px solid #cccccc;
+    margin-left: 0.5rem;
+    vertical-align: middle;
 }
 
 .content {
@@ -29,9 +35,9 @@ body {
     margin-right: auto;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (min-width: 0px) and (max-width: 600px) {
     .content {
-        width: 50rem !important;
+        width: 90%;
     }
 }
 
